@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/09 20:24:22 brook Exp $
+
+SHA1 (R/later_0.8.0.tar.gz) = 6bbb80852efad3602fdafd45864c1cc7b3e66d8c
+RMD160 (R/later_0.8.0.tar.gz) = 6d0552562af6134677d665a71bd69c7cd38f8866
+SHA512 (R/later_0.8.0.tar.gz) = 4a5080cca1f51de5e2cd90a11946613a795acbad6d8bd694e8a658d80305f0f9a53214a4d7b4542a9d92a5389fb0249ebccecd6d84a17116f71a48f049aa99e2
+Size (R/later_0.8.0.tar.gz) = 40293 bytes
